[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anytype-api"
version = "0.1.0"
description = "Anytype API操作ライブラリ"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.14.2",
]

[project.scripts]
anytype = "anytype.main:main"

[tool.hatch.build.targets.wheel]
packages = ["anytype"]
